--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,23 @@
+lib-cov
+*.seed
+*.log
+*.csv
+*.dat
+*.out
+*.pid
+*.gz
+
+pids
+logs
+results
+
+npm-debug.log
 node_modules
-.npm-debug.log
+
 .sass-cache
+
+# Cabin-specific ignored files
+dist
+.grunt
+
 .DS_Store
