--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
- {
+{
   "name": "funnythingz.com",
   "version": "0.0.0",
   "devDependencies": {
     "grunt": "~0.4.1",
     "load-grunt-tasks": "~0.1.0",
-    "grunt-pages": "~0.11.2",
+    "grunt-pages": "^0.11.2",
     "grunt-contrib-compass": "~0.2.0",
     "grunt-contrib-copy": "~0.4.1",
     "grunt-contrib-watch": "~0.4.3",
@@ -17,4 +17,3 @@
     "node": ">=0.10.0"
   }
 }
-
